--- a/test/fixtures/players.yml
+++ b/test/fixtures/players.yml
@@ -33,3 +33,8 @@ vk_player:
   password_digest:
   vk_id: 1
   vk_token: foobar
+
+baz:
+  name: baz
+  email: baz@qux.com
+  password_digest: <%= Digest::MD5.hexdigest("bazqux123") %>
