More model tests

--- a/test/fixtures/purchases.yml
+++ b/test/fixtures/purchases.yml
@@ -11,5 +11,6 @@
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one: {}
-two: {}
+booster:
+  player: foo
+  purchase_type_id: booster
