Update purchase tests, reannotate

--- a/test/fixtures/purchases.yml
+++ b/test/fixtures/purchases.yml
@@ -7,10 +7,11 @@
 #  purchase_type_id :integer
 #  created_at       :datetime         not null
 #  updated_at       :datetime         not null
+#  expires_at       :datetime
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 booster:
   player: foo
-  purchase_type_id: booster
+  purchase_type: booster
