--- a/test/fixtures/players.yml
+++ b/test/fixtures/players.yml
@@ -2,18 +2,20 @@
 #
 # Table name: players
 #
-#  id              :integer          not null, primary key
-#  name            :string
-#  email           :string
-#  password_digest :string
-#  created_at      :datetime         not null
-#  updated_at      :datetime         not null
-#  vk_token        :string
-#  vk_id           :integer
-#  sash_id         :integer
-#  level           :integer          default(0)
-#  avatar          :string
-#  username        :string
+#  id                     :integer          not null, primary key
+#  name                   :string
+#  email                  :string
+#  password_digest        :string
+#  created_at             :datetime         not null
+#  updated_at             :datetime         not null
+#  vk_token               :string
+#  vk_id                  :integer
+#  sash_id                :integer
+#  level                  :integer          default(0)
+#  avatar                 :string
+#  username               :string
+#  password_reset_token   :string
+#  password_reset_sent_at :datetime
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
