--- a/test/fixtures/players.yml
+++ b/test/fixtures/players.yml
@@ -16,6 +16,7 @@
 #  username               :string
 #  password_reset_token   :string
 #  password_reset_sent_at :datetime
+#  token                  :string
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
@@ -25,12 +26,14 @@ foo:
   email: foo@bar.com
   username: foo
   password_digest: <%= BCrypt::Password.create("foobar", cost: 4) %>
+  token: <%= SecureRandom.base58(24) %>
 
 bar:
   name: Bar
   email: bar@foo.com
   username: bar
   password_digest: <%= BCrypt::Password.create("barfoo", cost: 4) %>
+  token: <%= SecureRandom.base58(24) %>
 
 vk_player:
   name: VK user
@@ -39,9 +42,11 @@ vk_player:
   password_digest: <%= BCrypt::Password.create(SecureRandom.hex, cost: 4) %>
   vk_id: 1
   vk_token: foobar
+  token: <%= SecureRandom.base58(24) %>
 
 baz:
   name: baz
   email: baz@qux.com
   username: baz
   password_digest: <%= BCrypt::Password.create("bazqux", cost: 4) %>
+  token: <%= SecureRandom.base58(24) %>
