--- a/test/fixtures/topics.yml
+++ b/test/fixtures/topics.yml
@@ -10,6 +10,7 @@
 #  created_at  :datetime         not null
 #  updated_at  :datetime         not null
 #  featured    :boolean          default(FALSE)
+#  paid        :boolean          default(FALSE)
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
