Store square VK images

--- a/test/fixtures/players.yml
+++ b/test/fixtures/players.yml
@@ -18,6 +18,7 @@
 #  token                  :string
 #  xmpp_password          :string
 #  visited_at             :datetime
+#  vk_avatar              :string
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
