--- a/test/fixtures/reports.yml
+++ b/test/fixtures/reports.yml
@@ -2,11 +2,12 @@
 #
 # Table name: reports
 #
-#  id         :integer          not null, primary key
-#  player_id  :integer
-#  message    :text
-#  created_at :datetime         not null
-#  updated_at :datetime         not null
+#  id          :integer          not null, primary key
+#  player_id   :integer
+#  message     :text
+#  created_at  :datetime         not null
+#  updated_at  :datetime         not null
+#  question_id :integer
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
