--- a/test/fixtures/players.yml
+++ b/test/fixtures/players.yml
@@ -18,6 +18,7 @@
 #  token                  :string
 #  visited_at             :datetime
 #  vk_avatar              :string
+#  device_token           :string
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
