--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -29,6 +29,8 @@ production:
   aws_access_key_id: <%= ENV["AWS_ACCESS_KEY_ID"] %>
   aws_secret_access_key: <%= ENV["AWS_SECRET_ACCESS_KEY"] %>
   aws_s3_bucket_name: <%= ENV["AWS_S3_BUCKET_NAME"] %>
+  apn_certificate: "<%= ENV["APN_CERTIFICATE"] %>"
+  apn_environment: <%= ENV["APN_ENVIRONMENT"] %>
   pusher_app_id: <%= ENV["PUSHER_APP_ID"] %>
   pusher_key: <%= ENV["PUSHER_KEY"] %>
   pusher_secret: <%= ENV["PUSHER_SECRET"] %>
